--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
-.env 
-node_modules
+# Node modules
+node_modules/
+
+# Environment files
+.env
+.env.local
+.env.development
+.env.production
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Log files
+*.log
+
+# Config files you don’t want on GitHub
+config/development.json
+config/production.json
+
+# Build files (if any)
+dist/
+build/
+
+# Uploaded images (optional)
+public/images/uploads/
